k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: booking-platform
  labels:
    app.kubernetes.io/part-of: booking-platform
    environment: production
